ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: example.local
  # - host: example.local
    http:
      paths:
      - path: /
        # pathType: Exact
        backend:
          service:
            name: nginx
            port:
              number: 80
