ingress/ingress_https_redirect.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
  - host: example.192.168.64.214.nip.io
  # - host: example.nip.io
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /foo
      - /bar
    forceSlash: true
